[gd_scene load_steps=7 format=2]

[ext_resource path="res://.import/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.152941, 0.137255, 0.137255, 0.827451 )

[node name="CenterContainer" type="CenterContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
margin_left = 810.0
margin_top = 375.0
margin_right = 1110.0
margin_bottom = 705.0
rect_min_size = Vector2( 300, 300 )
custom_constants/separation = 16

[node name="Label" type="Label" parent="Background/CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 300.0
margin_bottom = 78.0

[node name="Continue" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 300.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 2 )
text = "Continue"

[node name="RestartPause" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 300.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 4 )
text = "Restart"

[node name="Quit" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 300.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/RestartPause" to="." method="_on_RestartPause_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
